  all references to "soapbox" (including class and package names) from
  "soapbox" to "soapfish" causing a big API break for all existing users. Also
  SoapboxRequest and SoapboxResponse were renamed to SOAPRequest/SOAPResponse
  so they blend in better with the overall naming convention.
* This release fixes a potential SECURITY ISSUE (pattern restrictions were not
  applied correctly)
* fixes for wsdl2py and xsd2py when using Python 3
* restored ability to validate parsed XML using a soapfish schema in ComplexType
* support choice indicator in ComplexTypes (#39)
  This fixes validation of matching XML documents (previously soapfish always
  assumed sequences) as well as code generation from WSDL/XSD
  patch contributed by Martin Mrose, tests written by Felix Schwarz
* add support for xsd.date (date range currently limited by datetime.date)
* Bug fixes:
  - fix exception in SOAPDispatcher when a handler does not return a SOAPResponse
  - correctly apply pattern restrictions for simple types


0.5.1 (2014-06-12)
------------------
* downgrade log level on soap action discovery


0.5.0 (2014-06-12)
------------------
* Make elements inherit from schema namespace
* better logging in soap/stub
* soap12: Quotes around action in http header


0.4.0 (2014-05-06)
------------------
* "soapbox" project forked by Felix Schwarz as "soapbox-bsd" due to
  licensing incompatibilities (Flight Data Services insists on using the
  GPL-incompatible OSL). This fork is based on the last soapbox commit
  still using the original 3-clause BSD license (7d3516fe).
  Later on the fork received significant contributions from Thomas Recouvreux
  and Xavier Fernandez (Polyconseil).
* added framework-agnostic SOAP dispatcher so soapbox-bsd is not tied to Django
  anymore but can be used with virtually any web framework (including Flask,
  Pyramid, pure WSGI)
* support for SOAP 1.2 and WSDL 1.2
* support for WS-Addressing
* Code is now compatible with Python 3
* support for Django >= 1.4