@@ -11,7 +11,8 @@ Changes
   SoapboxRequest and SoapboxResponse were renamed to SOAPRequest/SOAPResponse
   so they blend in better with the overall naming convention.
 * This release fixes a potential SECURITY ISSUE (pattern restrictions were not
-  applied correctly)
+  applied correctly).
+* schema validation now also uses imported schemas correctly.
 * fixes for wsdl2py and xsd2py when using Python 3
 * restored ability to validate parsed XML using a soapfish schema in ComplexType
 * support choice indicator in ComplexTypes (#39)
